Avoided the repetitive registering and deregistering event source as suggested by TLama
I would prefer their methods to be the instance methods rather than
class methods to avoid the repetitive registering and deregistering
event source. I would register the event source when the instance of the
class is created and deregister when destroyed. Or make a global
threadvar and initialize it once.

http://stackoverflow.com/questions/30229826/writing-to-the-windows-event-log-using-delphi/30229827?noredirect=1#comment48566147_30229827

--- a/Test app/Source/MyTestApp.dproj
+++ b/Test app/Source/MyTestApp.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>VCL</FrameworkType>
         <MainSource>MyTestApp.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Application</AppType>
@@ -60,6 +60,8 @@
         <DCCReference Include="Forms\FormMain.pas">
             <Form>MainForm</Form>
         </DCCReference>
+        <DCCReference Include="Units\EventLogOld.pas"/>
+        <DCCReference Include="Units\EventLogTest.pas"/>
         <DCCReference Include="..\..\EventLog.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
@@ -116,6 +118,18 @@
             </Delphi.Personality>
             <Deployment>
                 <DeployFile LocalName="Win32\Debug\MyTestApp.exe" Configuration="Debug" Class="ProjectOutput">
+                    <Platform Name="Win32">
+                        <RemoteName>MyTestApp.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="..\Bin\Win32\Debug\MyTestApp.rsm" Configuration="Debug" Class="DebugSymbols">
+                    <Platform Name="Win32">
+                        <RemoteName>MyTestApp.rsm</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="..\Bin\Win32\Debug\MyTestApp.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>MyTestApp.exe</RemoteName>
                         <Overwrite>true</Overwrite>
